Mon Nov 17 17:24:13 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/bsttrackrollctrl.c:
	* beast-gtk/bstpianorollctrl.c: \\-escape slashes in menu item names.

	* beast-gtk/gxk/gxkgadgetfactory.c: unescape action-names via
	g_strcompress() which also handles "\\/".

Mon Nov 17 16:44:38 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/dialogs/gadgets-beast.xml: removed action-root="" resetting
	from snet-router popup menu. the factories *do* limit actions to the
	right scope. (fixes duplicate menu items in the router popup.)
	
	* beast-gtk/bstmessages.c:
	* beast-gtk/bstcatalog.[hc]: deleted, code was switched back to keep
	action labels, accelerators, tooltips and blurb in .c files (or xml
	GUI descriptions).

	* beast-gtk/gxk/gxktexttools.c: fix segfaults wrg missing toolbar.
	
Mon Nov 17 16:33:17 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/dialogs/gadgets-standard.xml: more toolbar widget
	definitions, defined toolbar for gxk-scroll-text.

	* beast-gtk/gxk/gxktoolbar.[hc]: deleted, code isn't used anymore,
	replacements are xml GUI stencils and GxkMenuButton.

	* beast-gtk/gxk/gxktexttools.[hc]: switched to xml stencil toolbar.

	* beast-gtk/bstutils.[hc]: lots of cleanups, removed cruft. moved
	bst_action_list_add_cat() and bst_action_list_from_cats() here from
	bstmenus.[hc].

	* beast-gtk/bstradiotools.[hc]: deleted, radio-tools aren't
	used anymore, GxkActionGroup is a suitable replacement.

	* beast-gtk/bstmenus.[hc]: removed all non-BstChoice menu/factory
	cruft, workaround and helper code as it's not anymore needed, due
	to GxkActionList.

Mon Nov 17 01:16:40 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/dialogs/gadgets-beast.xml: added stock image to /Utils
	submenu of snet-popup.

	* beast-gtk/dialogs/gadgets-standard.xml: removed explicit property
	settings from factory-branch, the call-variables are pass on now.

	* beast-gtk/gxk/gxkgadgetfactory.[hc]: removed proeprties except
	uline-label from GxkFactoryBranch. copy call-options for