@@ -1,5 +1,4 @@
 FIXMES:
-- add Zoom spinner to snet router
 - add "folder" icon to submenu items (like in gnome menus)
 - queue action updates upon grouped action execution 
 - introduce gxk_action_group_select()-freeze/thaw to surround select/exec pair
